[project]
name = "asrs-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
    "spacy>=3.8.7",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "camelot-py>=1.0.0",
    "flake8>=7.3.0",
    "ghostscript>=0.8.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "seaborn>=0.13.2",
]

[tool.pylint.messages-control]
disable = []

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
